--- a/src/about.njk
+++ b/src/about.njk
@@ -5,8 +5,8 @@ title: About Me
 
 <article role="main" class="writing">
     <header class="pb-8">
-        <img src="/assets/img/values/brain.svg" alt="" class="mx-auto">
-        <h1>Values</h1>
+        <img src="/assets/img/values/Guy with guitar.png" alt="Rakshit Soral" class="mx-auto">
+        <h1>About Rakshit Soral</h1>
     </header>
     <section>
         <p>I'm a highly adaptable product designer who prefers being a generalist rather than a specialist.</p>
