--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,7 +1,7 @@
 <header id="header" class="header mb-12 py-12 flex items-center sm:mb-6 sm:py-6 sm:block">
     <div class="logo w-1/2 sm:w-full">
         <a href="{{ '/' | url }}">
-            <img src="/assets/img/tg-sig-logo.svg" width="119" height="56" alt="{{ site.title }}">
+            <img src="/assets/img/logo.png" width="150" height="56" alt="{{ site.title }}">
         </a>
     </div>
     <nav role="navigation" aria-label="Main Navigation" class="text-center whitespace-nowrap sm:overflow-y-auto sm:px-0 sm:pb-2 sm:text-left">
@@ -11,7 +11,7 @@
         {% endfor %}
         -->
         <a href="/work" class="{{ 'active' if '/work' in page.url }} p-2 mx-2 text-white inline-block no-underline">Work</a>
-        <a href="/values" class="{{ 'active' if '/values' in page.url }} p-2 mx-2 text-white inline-block no-underline">Values</a>
+        <a href="/about" class="{{ 'active' if '/about' in page.url }} p-2 mx-2 text-white inline-block no-underline">About</a>
         <a href="/bio" class="{{ 'active' if '/bio' in page.url }} p-2 mx-2 text-white inline-block no-underline">Bio</a>
         <a href="/blog" class="{{ 'active' if '/blog' in page.url }} p-2 mx-2 text-white inline-block no-underline">Blog</a>
     </nav>
