--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -16,6 +16,6 @@
         <a href="/blog" class="{{ 'active' if '/blog' in page.url }} p-2 mx-2 text-white inline-block no-underline">Blog</a>
     </nav>
     <div class="contact w-1/2 text-right sm:w-full sm:text-left">
-        <img src="/assets/img/tg-sig-email.svg" width="143" height="36" alt="ted at tedgoas dot com" class="ml-auto sm:ml-0 sm:w-24">
+        <img src="/assets/img/signature.png" width="200" height="80" alt="ted at tedgoas dot com" class="ml-auto sm:ml-0 sm:w-24">
     </div>
 </header>
