--- a/src/about.njk
+++ b/src/about.njk
@@ -9,8 +9,8 @@ title: About Me
         <h1>About Rakshit Soral</h1>
     </header>
     <section>
-        <p>I'm a highly adaptable product designer who prefers being a generalist rather than a specialist.</p>
-        <blockquote class="text-4xl leading-none">Great product designers think like great <strike>artists</strike> product managers. <span class="whitespace-nowrap">- Marissa Louie</span></blockquote>
+        <p>I'm a highly adaptable Digital marketer skilled in SEO, Content Marketing, Social media marketing, and Account-based marketing. I aspire to become a T-shaped marketer sometime in my career.</p>
+        <blockquote class="text-4xl leading-none">"If you're a good marketing person, you have to be a little <strike>lazy</strike> crazy. <span class="whitespace-nowrap">- Jim Metcalf</span></blockquote>
         <p>I’m comfortable writing functional specs with product managers, jumping into code with engineers, and reviewing metrics with marketers. I can document every edge case in a design file, review pull requests in GitHub, lead research sessions, write UX copy, run meetings, and speak/present to large groups. I also value the “people” part of my job: mentoring, hiring, improving design team processes, and contributing to the team culture.</p>
         <img src="/assets/img/values/illo-clipboard.svg" alt="" class="mx-auto mt-16">
         <h2>What does “great design” Look Like?</h2>
