--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: default
 meta_title: Home
-meta_description: I’m a reliable Digital Marketer, blogger, and a bit of developer playing around with wordpress and JAMstack.
+meta_description: Rakshit is a reliable Digital Marketer, blogger, and a hobbyist developer playing around with HTML, CSS, wordpress and JAMstack.
 body_class: home
-title: Rakshit Soral | Digital Marketing Consultant, Conversion Strategist
+title: Digital Marketing Consultant, Conversion Strategist
 roughjs: true
 ---
 
@@ -16,7 +16,7 @@ roughjs: true
     {% include "partials/work-list.njk" %}
     <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12  sm:flex-col-reverse">
         <div>
-            <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of<a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
+            <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
             <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
         </div>
         <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
