Changed footer text

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -20,6 +20,6 @@
         
        
         </aside>
-    <p class="my-4">Deployed on <a href="https://www.netlify.com/" class="no-underline text-current hover:text-gray-400 focus:text-gray-400">Netlify</a> and Hosted on Github Pages.
+    <p class="my-4">Created with 11ty and Tailwind CSS. Deployed on <a href="https://www.netlify.com/" class="no-underline text-current hover:text-gray-400 focus:text-gray-400">Netlify</a> and Hosted on Github Pages.
     <p> Content copyright@2022 - Rakshit Soral
   </footer>
