Added html comment system

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -10,7 +10,7 @@ pagination:
 <ul class="max-w-prose mx-auto">
 {% for post in collections.posts %}
     <li class="my-4 leading-snug">
-        <a class="" href="{{ post.url | url }}">{{ post.data.title }}</a>
+        <a class="" href="{{ post.url}}">{{ post.data.title }}</a>
         <time class="block">{{ post.date | readableDate }}</time>
     </li>
 {% endfor %}
