Added lazy loading attribute

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,7 +4,7 @@ layout: default
 
 <article class="flex flex-col items-center">
     {% if featured_image %}
-    <img src="{{ featured_image | url }}" alt=""{% if featured_image_classes %} class="{{ featured_image_classes }}"{% endif %}>
+    <img src="{{ featured_image | url }}" loading="lazy" alt=""{% if featured_image_classes %} class="{{ featured_image_classes }}"{% endif %}>
     {% endif %}
     <div class="writing">
     
@@ -61,7 +61,7 @@ layout: default
             <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
             <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
         </div>
-        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
+        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" alt="Rakshit Soral portrait" loading="lazy" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
         <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
         
     </section>
