--- a/src/index.njk
+++ b/src/index.njk
@@ -19,7 +19,7 @@ roughjs: true
             <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
             <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
         </div>
-        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
+        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
         <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
     </section>
 </div>
