--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,7 +1,7 @@
 <header id="header" class="header mb-12 py-12 flex items-center sm:mb-6 sm:py-6 sm:block">
     <div class="logo w-1/2 sm:w-full">
         <a href="{{ '/' | url }}">
-            <img src="/assets/img/logo.png" width="150" height="56" alt="{{ site.title }}">
+            <img src="/assets/img/logo.png" width="150" loading="lazy" alt="Rakshit Soral logo" height="56" alt="{{ site.title }}">
         </a>
     </div>
     <nav role="navigation" aria-label="Main Navigation" class="text-center whitespace-nowrap sm:overflow-y-auto sm:px-0 sm:pb-2 sm:text-left">
@@ -16,6 +16,6 @@
         <a href="/blog" class="{{ 'active' if '/blog' in page.url }} p-2 mx-2 text-white inline-block no-underline">Blog</a>
     </nav>
     <div class="contact w-1/2 text-right sm:w-full sm:text-left">
-        <img src="/assets/img/signature.png" width="200" height="80" alt="ted at tedgoas dot com" class="ml-auto sm:ml-0 sm:w-24">
+        <img src="/assets/img/signature.png" width="200" loading="lazy" height="80" alt="Rakshit Soral email" class="ml-auto sm:ml-0 sm:w-24">
     </div>
 </header>
