--- a/src/_includes/partials/work-list.njk
+++ b/src/_includes/partials/work-list.njk
@@ -1,5 +1,5 @@
   <section class="work-section work-section--dialpad p-16 max-w-2xl mb-40 flex items-start relative sm:p-8 sm:mt-12 sm:flex-col">
-      <img class="flex-shrink-0 mr-12 sm:mb-4" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Simform.png"></img>
+      <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="simform" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Simform.png"></img>
       <div>
           <h2 class="font-display text-sm leading-none uppercase tracking-widest transform -rotate-3 mb-6 -ml-2 text-blue-400">Currently</h2>
           <p>I work at Simform where I build scalable Digital Marketing Campaigns as a part of my work.</p>
@@ -8,7 +8,7 @@
       <span class="curl1 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
   </section>
   <section class="work-section work-section--stackoverflow p-16 max-w-2xl mb-40 flex items-start self-end relative sm:p-8 sm:mt-12 sm:flex-col">
-       <img class="flex-shrink-0 mr-12 sm:mb-4" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/hoojook.png"></img>
+       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="hoojook" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/hoojook.png"></img>
       <div>
           <h2 class="font-display text-sm leading-none uppercase tracking-widest transform rotate-2 mb-2 -ml-2 text-yellow-400">Before that</h2>
           <p>I worked at hoojook, building SEO and content marketing campaigns for two products.</p>
@@ -18,7 +18,7 @@
       <span class="boxes absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
   </section>
   <section class="work-section work-section--canfield p-16 max-w-2xl mb-40 flex items-start relative sm:p-8 sm:mt-12 sm:flex-col">
-         <img class="flex-shrink-0 mr-12 sm:mb-4" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/carbay.png"></img>
+         <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" width="96" alt="carbay" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/carbay.png"></img>
 
       <div>
           <h2 class="font-display text-sm leading-none uppercase tracking-widest transform -rotate-3 mb-6 -ml-2 text-green-400">And before that</h2>
