--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -21,6 +21,7 @@
         <meta name="description" content="{{ metaDesc }}">
         <meta name="author" content="{{ author.name }}">
         <meta name="robots" content="index, follow">
+        <meta name="google-site-verification" content="QKAutzM76pfG_N6d0B9tZu8dRRWwCp6IRUQInWLzITI" />
         <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
         <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.ico' | url }}">
         <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
