--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -69,5 +69,19 @@
         </script>
         {% endif %}
         <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+
+        <script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
     </body>
 </html>
