--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ roughjs: true
 
 <div role="main" class="flex flex-col">
     <section class="text-center max-w-4xl mx-auto mb-40" aria-labelledby="heading">
-        <h1 class="font-display text-4xl leading-none sm:text-3xl">Hi! I’m Rakshit Soral, a <span class="highlight-yellow px-4 -mx-2 inline-block relative">reliable</span> Digital Marketer and <span class="whitespace-nowrap">content</span> developer.</h1>
+        <h1 class="font-display text-4xl leading-none sm:text-3xl">Hi! I’m Rakshit Soral, a <span class="highlight-yellow px-4 -mx-2 inline-block relative">reliable</span> Digital Marketer.</h1>
         <p class="text-lg mt-8 mx-auto max-w-3xl sm:text-lg">I believe marketing is all about conveying your <strong class="box-blue mx-1">message</strong> to consumers and convincing them to show<strong class="box-green mx-1">interest</strong>, and <strong class="box-red mx-1">invest</strong> in your product & services</p>
        
     </section>
