--- a/src/_includes/partials/work-list.njk
+++ b/src/_includes/partials/work-list.njk
@@ -1,9 +1,18 @@
   <section class="work-section work-section--dialpad p-16 max-w-2xl mb-40 flex items-start relative sm:p-8 sm:mt-12 sm:flex-col">
+      <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="simform" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Plutomen.png"></img>
+      <div>
+          <h2 class="font-display text-sm leading-none uppercase tracking-widest transform -rotate-3 mb-6 -ml-2 text-blue-400">Currently</h2>
+          <p>I work at Simform where I build scalable Digital Marketing Campaigns as a part of my work.</p>
+          <p class="mt-4"><a href="/work/plutomen" class="link-dialpad">What I do at Plutomen</a></p>
+      </div>
+      <span class="curl1 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
+  </section>
+  <section class="work-section work-section--dialpad p-16 max-w-2xl mb-40 flex items-start relative sm:p-8 sm:mt-12 sm:flex-col">
       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="simform" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Simform.png"></img>
       <div>
           <h2 class="font-display text-sm leading-none uppercase tracking-widest transform -rotate-3 mb-6 -ml-2 text-blue-400">Currently</h2>
           <p>I work at Simform where I build scalable Digital Marketing Campaigns as a part of my work.</p>
-          <p class="mt-4"><a href="/work/simform" class="link-dialpad">What I do at Simform</a></p>
+          <p class="mt-4"><a href="/work/simform" class="link-dialpad">What I did at Simform</a></p>
       </div>
       <span class="curl1 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
   </section>
