--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -68,7 +68,7 @@
         }, 500)();
         </script>
         {% endif %}
-        <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+         <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 
@@ -84,6 +84,6 @@
   }
 </script>
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
+        <script async defer src="https://scripts.withcabin.com/hello.js"></script>
     </body>
 </html>
