--- a/src/_includes/partials/work-list.njk
+++ b/src/_includes/partials/work-list.njk
@@ -1,12 +1,11 @@
-  <section class="work-section work-section--stackoverflow p-16 max-w-2xl mb-40 flex items-start self-end relative sm:p-8 sm:mt-12 sm:flex-col">
-       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="hoojook" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Kitecyber-logo-new"></img>
+  <section class="work-section work-section--dialpad p-16 max-w-2xl mb-40 flex items-start relative sm:p-8 sm:mt-12 sm:flex-col">
+      <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="Kitecyber Logo" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Kitecyber-logo-new.png"></img>
       <div>
-          <h2 class="font-display text-sm leading-none uppercase tracking-widest transform rotate-2 mb-2 -ml-2 text-yellow-400">Currently</h2>
+          <h2 class="font-display text-sm leading-none uppercase tracking-widest transform -rotate-3 mb-6 -ml-2 text-blue-400">Currently</h2>
           <p>At present, I work at Kitecyber where I am spearheading the entire Demand Gen (Inbound and Outbound) function from the ground up.</p>
-          <p class="mt-4"><a href="/work/kitecyber" class="link-stack">What I do at Kitecyber</a></p>
+          <p class="mt-4"><a href="/work/kitecyber" class="link-dialpad">What I do at Kitecyber</a></p>
       </div>
-      <span class="curl2 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
-      <span class="boxes absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
+      <span class="curl1 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
   </section>
   <section class="work-section work-section--stackoverflow p-16 max-w-2xl mb-40 flex items-start self-end relative sm:p-8 sm:mt-12 sm:flex-col">
        <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="hoojook" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Plutomen_trans.png"></img>
