--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: default
-meta_title: Home
-meta_description: Rakshit is a reliable Digital Marketer, blogger, and a hobbyist developer playing around with HTML, CSS, wordpress and JAMstack.
+meta_title: Demand Generation Consultant in India
+meta_description: Rakshit is a reliable Demand Generation Consultant, blogger, and a hobbyist developer playing around with HTML, CSS, wordpress and JAMstack.
 body_class: home
 title: Digital Marketing Consultant, Conversion Strategist
 roughjs: true
