--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -25,7 +25,7 @@ layout: default
             <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
             <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
         </div>
-        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/home/Rakshit Soral.jpg" alt="Rakshit Soral portrait" loading="lazy" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
+        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/Rakshit Soral.png" alt="Rakshit Soral portrait" loading="lazy" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
         <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
         
     </section>
@@ -34,9 +34,5 @@ layout: default
 
 </article>
 
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24GKCNeRki3DPU33aOCC8WC."+"&opts=16798&num=10&ts=1645945714026");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
+
 
