Added utterance comments

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -34,5 +34,11 @@ layout: default
 
 </article>
 
-
+<script src="https://utteranc.es/client.js"
+        repo="https://github.com/rakshitsoral/Dante"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 
