update utterance script

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -35,8 +35,8 @@ layout: default
 </article>
 
 <script src="https://utteranc.es/client.js"
-        repo="https://github.com/rakshitsoral/Dante"
-        issue-term="pathname"
+        repo="rakshitsoral/Dante"
+        issue-term="title"
         theme="github-dark"
         crossorigin="anonymous"
         async>
