--- a/src/_includes/partials/work-list.njk
+++ b/src/_includes/partials/work-list.njk
@@ -8,7 +8,7 @@
       <span class="curl1 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
   </section>
   <section class="work-section work-section--stackoverflow p-16 max-w-2xl mb-40 flex items-start self-end relative sm:p-8 sm:mt-12 sm:flex-col">
-       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="hoojook" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Plutomen_trans.png"></img>
+       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="hoojook" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Plutomen Logo New.png"></img>
       <div>
           <h2 class="font-display text-sm leading-none uppercase tracking-widest transform rotate-2 mb-2 -ml-2 text-yellow-400">Before that</h2>
           <p>I worked at Plutomen as a full-stack marketer. I led the entire inbound and outbound motion for the company and built a team of 4 people under me during my tenure. </p>
